# Polymarket-bots

./: .env-example  .gitignore  AGENTS.md  README.md  __init__.py  pyproject.toml
.agents/: CODE_STYLE.md  README.md
.agents/skills/code-style-review/: SKILL.md
.agents/skills/generate-c4-documentation/: SKILL.md
.agents/tasks/: README.md
.bot-state/: fa8847b0c3318327.source-ids
.codex/: config.toml
.codex/agents/reviewers/: async-blocking-io-reviewer.toml  cohesive-module-package-reviewer.toml  constant-extraction-test-reviewer.toml  constant-ownership-reviewer.toml  contract-literal-reviewer.toml  cross-boundary-contract-reviewer.toml  dependency-light-foundation-reviewer.toml  descriptive-name-reviewer.toml  domain-shared-code-reviewer.toml  duplicated-logic-reviewer.toml  fail-safe-trading-reviewer.toml  final-contract-scan-reviewer.toml  final-validation-scan-reviewer.toml  import-placement-reviewer.toml  important-branch-test-reviewer.toml  ingress-validation-reviewer.toml  init-barrel-export-reviewer.toml  intent-comment-reviewer.toml  internal-revalidation-reviewer.toml  literal-single-source-reviewer.toml  live-execution-gate-reviewer.toml  market-data-guard-reviewer.toml  mirror-event-idempotency-reviewer.toml  mixed-domain-service-reviewer.toml  module-responsibility-reviewer.toml  object-method-placement-reviewer.toml  owner-local-code-reviewer.toml  package-root-ownership-reviewer.toml  primitive-precondition-reviewer.toml  (+14 more)
bots/: my_bot.py
cli/: __init__.py  config.py  entrypoint.py  factories.py  markets.py  runner.py  streams.py
cli/dashboard/: controller.py  render.py  state.py
cli/observability/: broker.py  events.py  observer.py
docs/: api-notes.md  architecture.md  bot-author-guide.md  implementation-plan.md
examples/: __init__.py  example_dynamic_bucket.py  example_dynamic_random_hold.py  example_multi_market.py  example_price_watcher.py  example_random_hold.py  example_rebound.py  example_wallet_follower.py
execution/: __init__.py  broker.py  live.py  orders.py
execution/paper/: __init__.py  book.py  fill_math.py  market_data.py  portfolio.py  validation.py
framework/: __init__.py  base.py  book_validation.py  config.py  context.py  dispatch.py  events.py  markets.py  outcomes.py  runner.py  streams.py  wallets.py
framework/events/: __init__.py  books.py  wallet_trades.py
framework/runner/: __init__.py  validation.py
polymarket/: clob.py  gamma.py  types.py  wallet_activity.py  ws_market.py
polymarket_adapter/: __init__.py  clob.py  data.py  errors.py  gamma.py  normalization.py  types.py  wallet_activity.py  ws_market.py  ws_user.py
polymarket_adapter/normalization/: __init__.py  book.py  market.py  values.py
polymarket_adapter/wallet_activity/: client.py  contracts.py  normalization.py  stream.py
scripts/: database.py  mirror_worker.py  openapi.py  paths.py  select_wallet_for_analysis.py  short_wallet_files.py  terminal.py  wallet_analysis.py  wallet_payload_contracts.py  wallet_payloads.py  wallet_report.py  wallet_results.py  wallet_scan_report.py  wallets_finder.py
scripts/polymarket_wallet_api/: __init__.py  activity.py  client.py  constants.py  gamma.py  normalization.py  positions.py  sdk_pagination.py  sdk_payloads.py
scripts/select_wallet_for_analysis/: __main__.py  command.py  export.py  picker.py  rows.py
scripts/wallet_analysis/: __init__.py  cash_metrics.py  classification.py  contracts.py  market_metrics.py  metrics.py
scripts/wallets_finder/: __init__.py  __main__.py  command.py  records.py  windows.py
src/polybot/: async_io.py  my_bot.py  runtime.py
tests/: conftest.py  test_activity.py  test_backtesting.py  test_backtesting_coverage.py  test_backtesting_state.py  test_book.py  test_bootstrap_observability.py  test_btc_5m_example.py  test_btc_five_minute_momentum_example.py  test_cli.py  test_config.py  test_dashboard.py  test_dynamic_market_tracking.py  test_dynamic_random_hold_example.py  test_dynamic_random_hold_wallet_filter_example.py  test_fixed_dollar_wallet_copy.py  test_framework_markets.py  test_idempotency.py  test_json_codec.py  test_live.py  test_market_routing.py  test_multi_market_example.py  test_orders.py  test_paper.py  test_paper_performance.py  test_performance_artifacts.py  test_performance_chart.py  test_portfolio_transitions.py  test_position_transition.py  test_public_market_adapters.py  test_random_hold_example.py  test_rebound_example.py  test_recording_archive.py  test_recording_inspect.py  test_recording_market_stream.py  test_recording_planning.py  test_recording_reader_replay.py  test_recording_runtime.py  test_recording_trim.py  test_recording_trim_cli.py  (+11 more)
(+361 files in other folders)
