[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bots"
version = "0.1.0"
description = "Standalone custom Polymarket bot framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1,<2.0",
    "polymarket-client==0.1.0b17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
]

[tool.setuptools]
packages = [
  "bots",
  "bots.examples",
  "bots.execution",
  "bots.execution.paper",
  "bots.framework",
  "bots.framework.events",
  "bots.framework.runner",
  "bots.cli",
  "bots.polymarket",
  "bots.polymarket.wallet_activity",
  "bots.polymarket.normalization",
  "scripts",
  "scripts.select_wallet_for_analysis",
  "scripts.polymarket_wallet_api",
  "scripts.wallets_finder",
]

[tool.setuptools.package-dir]
bots = "."
"bots.examples" = "examples"
"bots.execution" = "execution"
"bots.execution.paper" = "execution/paper"
"bots.framework" = "framework"
"bots.framework.events" = "framework/events"
"bots.framework.runner" = "framework/runner"
"bots.cli" = "cli"
"bots.polymarket" = "polymarket_adapter"
"bots.polymarket.normalization" = "polymarket_adapter/normalization"
scripts = "scripts"
"scripts.select_wallet_for_analysis" = "scripts/select_wallet_for_analysis"
"scripts.polymarket_wallet_api" = "scripts/polymarket_wallet_api"
"scripts.wallets_finder" = "scripts/wallets_finder"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
