[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-polybot"
version = "0.1.0"
description = "Standalone custom Polymarket bot framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1,<2.0",
    "asciichartpy==1.5.25",
    "polymarket-client==0.1.0b17",
    "rich==15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9.0",
]

[tool.setuptools]
packages = [
  "polybot",
  "polybot.examples",
  "polybot.execution",
  "polybot.execution.paper",
  "polybot.framework",
  "polybot.framework.config",
  "polybot.framework.events",
  "polybot.framework.runner",
  "polybot.cli",
  "polybot.cli.dashboard",
  "polybot.cli.followed_wallets",
  "polybot.cli.followed_wallets.persistence",
  "polybot.cli.streams",
  "polybot.cli.tracking",
  "polybot.cli.observability",
  "polybot.cli.performance_chart",
  "polybot.cli.resolution",
  "polybot.cli.resolution_state",
  "polybot.cli.runner",
  "polybot.polymarket",
  "polybot.polymarket.public_data",
  "polybot.polymarket.wallet_activity",
  "polybot.polymarket.normalization",
  "polybot.polymarket.recording_feed",
  "polybot.polymarket.recording_metadata",
  "polybot.polymarket.positions",
  "polybot.backtesting",
  "polybot.backtesting.state",
  "polybot.backtesting.scheduler",
  "polybot.backtesting.service",
  "polybot.performance",
  "polybot.performance.artifacts",
  "polybot.performance.contracts",
  "polybot.performance.contracts.summary",
  "polybot.persistence",
  "polybot.recording",
  "polybot.recording.archive",
  "polybot.recording.contracts",
  "polybot.recording.coordinator",
  "polybot.recording.serialization",
  "polybot.recording.service",
  "polybot.runtime",
  "polybot.runtime.performance",
  "scripts",
  "scripts.select_wallet_for_analysis",
  "scripts.polymarket_wallet_api",
  "scripts.wallets_finder",
  "scripts.wallet_analysis",
]

[tool.setuptools.package-dir]
"" = "src"
scripts = "scripts"
"scripts.select_wallet_for_analysis" = "scripts/select_wallet_for_analysis"
"scripts.polymarket_wallet_api" = "scripts/polymarket_wallet_api"
"scripts.wallets_finder" = "scripts/wallets_finder"
"scripts.wallet_analysis" = "scripts/wallet_analysis"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
